--- a/templates/base.html
+++ b/templates/base.html
@@ -32,56 +32,41 @@
   <div class="container-fluid">
     <a class="navbar-brand me-5" href="{% url 'home' %}">Praise the Loud</a>
 
-      {% if user.is_authenticated %}
-        <span class="navbar-text me-auto">Hello {{ user.username }}</span>
-      {% endif %}
+    {% if user.is_authenticated %}
+      <span class="navbar-text me-auto">Hello {{ user.username }}</span>
+    {% endif %}
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <!-- Search form: always visible -->
+    <form class="d-flex nav-search me-2" method="get" action="{% url 'search_view' %}">
+      {{ form.search_type }}
+      {{ form.search_term }}
+      <button class="btn btn-outline-light nav-btn" type="submit">Search</button>
+    </form>
 
+    <!-- Hamburger toggler on far right -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="navToggler">
+      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-close-icon d-none">&times;</span>
+    </button>
+
+
+    <!-- Collapsible links -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-        <!-- Always visible -->
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about' %}">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'gallery' %}">Wall of Chaos</a>
-        </li>
-
-
-        <!-- Only show if logged in -->
+        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'gallery' %}">Wall of Chaos</a></li>
+        
         {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'review' %}">New Gig Review</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-          </li>
-          <!-- If not logged in -->
+          <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Profile</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'review' %}">New Gig Review</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
         {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
         {% endif %}
       </ul>
-        <!-- Search form -->
-        <form class="d-flex nav-search" method="get" action="{% url 'search_view' %}">
-          {{ form.search_type }}
-          {{ form.search_term }}
-          <button class="btn btn-outline-light nav-btn" type="submit">Search</button>
-        </form>      
     </div>
   </div>
 </nav>
