--- a/static/css/style.css
+++ b/static/css/style.css
@@ -289,6 +289,8 @@ input:-webkit-autofill:focus {
     border-radius: 10px;
     align-self: center;
     border: none !important;
+    display: block;
+    margin: 0 auto;
 }
 .card-text {
     color: #F5F5F5;
@@ -376,16 +378,16 @@ input:-webkit-autofill:focus {
     width: 100%;
     height: 60px;
 }
-.footer-contact {
+.footer-p {
+    font-size: 1.2rem;
+}
+.contact {
     color: #F5F5F5;
     text-decoration: none;
     font-size: 1.5rem;
 }
-.footer-contact:hover {
+.contact:hover {
     color: #F50000;
-}
-.footer-p {
-    font-size: 1.2rem;
 }
 
 /*Media Queries*/
@@ -406,9 +408,6 @@ input:-webkit-autofill:focus {
     }
     .about p {
         margin-top: 20px;
-    }
-    .footer-contact {
-        font-size: 1rem;
     }
     .footer-p {
         font-size: 0.7rem;
@@ -460,9 +459,6 @@ input:-webkit-autofill:focus {
         width: 400px;
         height: 400px;
         object-fit: contain;
-    }
-    .footer-contact {
-        font-size: 1.3rem;
     }
     .footer-p {
         font-size: 1rem;
