--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,6 @@
       <span class="navbar-close-icon d-none">&times;</span>
     </button>
 
-
     <!-- Collapsible links -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -66,6 +65,7 @@
           <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
         {% endif %}
+        <li class="nav-item"><a class="nav-link contact" href="{% url 'contact' %}">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -79,7 +79,6 @@
 <footer class="footer container-fluid">
   <div class="row mx-auto justify-content-center align-items-center">
     <div class=" text-center col-12">
-      <a class="footer-contact" href="{% url 'contact' %}">Contact</a>
       <p class="footer-p">&copy; /*axdesigns*/ 2025</p>
     </div>
   </div>
