--- a/gig_reviews/templates/gig_reviews/contact.html
+++ b/gig_reviews/templates/gig_reviews/contact.html
@@ -2,45 +2,66 @@
 {% load static %}
 
 {% block content %}
-<h2>Contact Us</h2>
 
-<!-- Show Django messages -->
-{% if messages %}
-  {% for message in messages %}
-    <p style="color: green;">{{ message }}</p>
-  {% endfor %}
-{% endif %}
+<div class="container-fluid page-item">
+  <div class=" row mx-auto justify-content-center align-items-start">
+    <div class="col-12 text-center">
+      <h1>Contact Us</h1>
+        <!-- Show Django messages -->
+        {% if messages %}
+          {% for message in messages %}
+            <p style="color: green;">{{ message }}</p>
+          {% endfor %}
+        {% endif %}
 
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
 
-  <!-- Role Selector -->
-  <label for="user_type">Who are you?</label>
-  <select name="user_type" id="user_type" class="form-select mb-3">
-    <option value="">-- Select --</option>
-    <option value="fan">Fan</option>
-    <option value="artist">Artist</option>
-    <option value="venue">Venue</option>
-  </select>
+        <!-- Role Selector -->
+        <label for="user_type">Who are you?</label>
+        <select name="user_type" id="user_type" class="form-select mb-3" data-selected="{{ selected_role|default:'' }}">
+          <option value="">-- Select --</option>
+          <option value="fan">Fan</option>
+          <option value="artist">Artist</option>
+          <option value="venue">Venue</option>
+        </select>
 
-  <!-- Fan Form -->
-  <div id="fanForm" style="display:none;">
-    <h3>Fan Contact Form</h3>
-    {{ fan_form.as_p }}
+        <!-- Fan Form -->
+        <div id="fanForm" style="display:none;">
+          <h3>Fan Contact Form</h3>
+          {{ fan_form.as_p }}
+          {% for field in fan_form %}
+            {% for error in field.errors %}
+              <p style="color: red;">{{ error }}</p>
+            {% endfor %}
+          {% endfor %}
+        </div>
+
+        <!-- Artist Form -->
+        <div id="artistForm" style="display:none;">
+          <h3>Artist Contact Form</h3>
+          {{ artist_form.as_p }}
+          {% for field in fan_form %}
+            {% for error in field.errors %}
+              <p style="color: red;">{{ error }}</p>
+            {% endfor %}
+          {% endfor %}
+        </div>
+
+        <!-- Venue Form -->
+        <div id="venueForm" style="display:none;">
+          <h3>Venue Contact Form</h3>
+          {{ venue_form.as_p }}
+          {% for field in fan_form %}
+            {% for error in field.errors %}
+              <p style="color: red;">{{ error }}</p>
+            {% endfor %}
+          {% endfor %}
+        </div>
+        <button type="submit" class="btn page-btn mt-3">Send Message</button>
+      </form>
+    </div>
   </div>
+</div>
 
-  <!-- Artist Form -->
-  <div id="artistForm" style="display:none;">
-    <h3>Artist Contact Form</h3>
-    {{ artist_form.as_p }}
-  </div>
-
-  <!-- Venue Form -->
-  <div id="venueForm" style="display:none;">
-    <h3>Venue Contact Form</h3>
-    {{ venue_form.as_p }}
-  </div>
-
-  <button type="submit" class="btn btn-primary mt-3">Send Message</button>
-</form>
 {% endblock %}
