--- a/gig_reviews/templates/gig_reviews/thank_you.html
+++ b/gig_reviews/templates/gig_reviews/thank_you.html
@@ -3,8 +3,17 @@
 
 
 {% block content %}
-  <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
-  <h1>Thanks for your message!</h1>
-  <p>We’ll get back to you as soon as possible.</p>
-  <a href="{% url 'home' %}">Return to home</a>
+<div class="container-fluid page-item mt-5">
+  <div class="row justify-content-center">
+    <div class="col-12 text-center">
+      <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+      <h1>Thanks for your message!</h1>
+      <p>We’ll get back to you as soon as possible</p>
+      <p>Stay loud and see you at the front!</p>
+      <form action="{% url 'home' %}">
+        <button type="submit" class="page-btn">Return home</button>
+      </form>
+    </div>
+  </div>
+</div>  
 {% endblock %}
