--- a/gig_reviews/templates/gig_reviews/contact.html
+++ b/gig_reviews/templates/gig_reviews/contact.html
@@ -7,14 +7,10 @@
   <div class=" row mx-auto justify-content-center align-items-start">
     <div class="col-12 text-center">
       <h1>Contact Us</h1>
-        <!-- Show Django messages -->
-        {% if messages %}
-          {% for message in messages %}
-            <p style="color: green;">{{ message }}</p>
-          {% endfor %}
-        {% endif %}
+      <p>We love hearing from you! Please fill out the form below to get in touch</p>
+      <p>Select your role to display the appropriate contact form</p>
 
-      <form method="post" enctype="multipart/form-data">
+      <form method="post" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
 
         <!-- Role Selector -->
@@ -30,34 +26,30 @@
         <div id="fanForm" style="display:none;">
           <h3>Fan Contact Form</h3>
           {{ fan_form.as_p }}
-          {% for field in fan_form %}
-            {% for error in field.errors %}
-              <p style="color: red;">{{ error }}</p>
-            {% endfor %}
-          {% endfor %}
+          {% if fan_form.errors %}
+            <div class="text-danger mb-3">Please correct the errors in this form.</div>
+          {% endif %}
         </div>
 
         <!-- Artist Form -->
         <div id="artistForm" style="display:none;">
           <h3>Artist Contact Form</h3>
           {{ artist_form.as_p }}
-          {% for field in fan_form %}
-            {% for error in field.errors %}
-              <p style="color: red;">{{ error }}</p>
-            {% endfor %}
-          {% endfor %}
+            {% if artist_form.errors %}
+              <div class="text-danger mb-3">Please correct the errors in this form.</div>
+            {% endif %}
         </div>
 
         <!-- Venue Form -->
         <div id="venueForm" style="display:none;">
           <h3>Venue Contact Form</h3>
           {{ venue_form.as_p }}
-          {% for field in fan_form %}
-            {% for error in field.errors %}
-              <p style="color: red;">{{ error }}</p>
-            {% endfor %}
-          {% endfor %}
+            {% if venue_form.errors %}
+              <div class="text-danger mb-3">Please correct the errors in this form.</div>
+            {% endif %}
         </div>
+
+        <!--Submit Button -->
         <button type="submit" class="btn page-btn mt-3">Send Message</button>
       </form>
     </div>
