--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,8 @@
 
 <!-- Main content area -->
   <div class="content" >
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
   </div>
 
 <footer class="footer container-fluid">
