--- a/gig_reviews/templates/gig_reviews/404.html
+++ b/gig_reviews/templates/gig_reviews/404.html
@@ -5,11 +5,17 @@
 {% block title %}404{% endblock %}
 
 {% block content %}
-    <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
-    <h1>Ooooops!</h1>
-    <p>What have you done you plonker!</p>
-    <p>Return home and try again </p>
-    <p>If you still receive this message when you try again, go and get a beer, turn the volume up loud, shake you grey matter and try something else!</p>
-    <a href="{% url 'home' %}">Return to home</a>
-
+<div class="container-fluid page-item mt-5">
+  <div class="row justify-content-center">
+    <div class="col-12 text-center">
+      <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+      <h1>Ooooops!</h1>
+      <p>What have you done you plonker!</p>
+      <p>If you still receive this message when you try again, go and get a beer, turn the volume up loud, shake you grey matter and try something else!</p>
+      <form action="{% url 'home' %}">
+        <button type="submit" class="page-btn">Return home</button>
+      </form>
+    </div>
+  </div>
+</div>  
 {% endblock %}
