Correct spelling mistake in 404 page Add custom_404 function to views Route url paths in both project and app Tidy syntax in views and url files

--- a/gig_reviews/templates/gig_reviews/404.html
+++ b/gig_reviews/templates/gig_reviews/404.html
@@ -11,7 +11,7 @@
       <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
       <h1>Ooooops!</h1>
       <p>What have you done you plonker!</p>
-      <p>If you still receive this message when you try again, go and get a beer, turn the volume up loud, shake you grey matter and try something else!</p>
+      <p>If you still receive this message when you try again, go and get a beer, turn the volume up loud, shake your grey matter and try something else!</p>
       <form action="{% url 'home' %}">
         <button type="submit" class="page-btn">Return home</button>
       </form>
