Correct CSS after validation testing to remove duplicate horns class and corect width to auto Add standardised margin spacing to all pages

--- a/gig_reviews/templates/gig_reviews/contact.html
+++ b/gig_reviews/templates/gig_reviews/contact.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container-fluid page-item">
+<div class="container-fluid page-item mt-5">
   <div class=" row mx-auto justify-content-center align-items-start">
     <div class="col-12 text-center">
       <h1>Contact Us</h1>
