--- a/gig_reviews/templates/gig_reviews/author_profile.html
+++ b/gig_reviews/templates/gig_reviews/author_profile.html
@@ -11,7 +11,7 @@
       <h1>{{ author.username }}'s Public Profile</h1>
 
       <div class="result-card">
-        {% if profile and profile.image.url %}
+        {% if profile and profile.image.url and "placeholder" not in profile.image.url %}
           <img src="{{ profile.image.url }}" alt="{{ author.username }}'s profile picture"
                class="img-fluid mb-3">
         {% else %}
@@ -44,6 +44,11 @@
         <ul class="list-unstyled">
           {% for review in reviews %}
             <li class="chaos-card tilt">
+              {% if review.image and review.image.url and "placeholder" not in review.image.url %}
+              <img src="{{ review.image.url }}" class="card-img-top mt-3" alt="Fan review image">
+              {% else %}
+              <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+              {% endif %}
               <div class="card-body">
                 <h5><strong>{{ review.artist.name }}</strong> — {{ review.title }}</h5>
                 <p>{{ review.gig_date|date:"d/m/Y" }}</p>
