--- a/gig_reviews/templates/gig_reviews/gallery.html
+++ b/gig_reviews/templates/gig_reviews/gallery.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container-fluid mt-5">
   <h1 class="text-center mb-5">Wall of Chaos</h1>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         {% for review in reviews %}
