--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<div class="container-fluid hero-image">
+<div class="container-fluid hero-image mt-5">
     <div row class=" row mx-auto justify-content-center align-items-center">
         <div class="col-12 text-center">
             <img src="https://res.cloudinary.com/dqde3a83z/image/upload/ptl-hero-image_eccbob.png" class="img-fluid" alt="Praise The Loud hero imagae">
