--- a/gig_reviews/templates/gig_reviews/profile.html
+++ b/gig_reviews/templates/gig_reviews/profile.html
@@ -16,7 +16,7 @@
         {% endfor %}
       {% endif %}
 
-      <div class="result-card">
+      <div class="mt-5">
         {% if editing %}
           {% if profile.image %}
             <img src="{{ profile.image.url }}" class="img-fluid mb-3" alt="Current profile picture">
@@ -46,10 +46,10 @@
               {{ form.instagram.label_tag }}
               {{ form.instagram }}
             </div>
-            <button type="submit" class="page-btn">
+            <button type="submit" class="btn page-btn">
               {% if profile_exists %}Update{% else %}Create{% endif %} Profile
             </button>
-            <a href="{% url 'profile' %}" class="page-btn">Cancel</a>
+            <a href="{% url 'profile' %}" class="btn page-btn">Cancel</a>
           </form>
 
         {% elif profile_exists %}
@@ -90,6 +90,11 @@
           <ul class="list-unstyled">
             {% for review in reviews %}
               <li class="chaos-card tilt">
+              {% if review.image and review.image.url and "placeholder" not in review.image.url %}
+              <img src="{{ review.image.url }}" class="card-img-top mt-3" alt="Fan review image">
+              {% else %}
+              <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+              {% endif %}
                 <div class="card-body">
                   <h5><strong>{{ review.artist.name }}</strong> — {{ review.title }}</h5>
                   <p>{{ review.gig_date|date:"d/m/Y" }}</p>
