--- a/gig_reviews/templates/gig_reviews/signup.html
+++ b/gig_reviews/templates/gig_reviews/signup.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid page-item">
+<div class="container-fluid page-item mt-5">
   <div class=" row mx-auto justify-content-center align-items-start">
     <div class="col-12 text-center">
         <h1>Sign Up</h1>
+        <p>Please don't use your email address as your user name</p>
         <form method="post" class="d-flex flex-column align-items-stretch">
             {% csrf_token %}
             {{ form.as_p }}
