--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid page-item">
+<div class="container-fluid page-item mt-5">
   <div class=" row mx-auto justify-content-center align-items-start">
     <div class="col-12 text-center">
       <h1>Login</h1>
