--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 </footer>
 
 <!-- Include JavaScript files -->
-<script src="{% static 'js/script.js' %}"></script>
+<script src="{% static 'js/script.js' %}" defer></script>
 
 <!-- Bootstrap Bundle with Popper (required for navbar toggle) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
