--- a/gig_reviews/templates/gig_reviews/artist.html
+++ b/gig_reviews/templates/gig_reviews/artist.html
@@ -5,21 +5,18 @@
 {% block title %}{{ artist.name }}'s Profile{% endblock %}
 
 {% block content %}
-<div class="container search-item py-4">
+<div class="container-fluid search-item py-4">
   <div class="row mx-auto justify-content-center">
     <div class="col-12 text-center">
       <h1>{{ artist.name }}'s Public Profile</h1>
-
       {% if artist.logo %}
         <img src="{{ artist.logo.url }}" alt="{{ artist.name }}'s logo" class="img-fluid mb-3">
       {% else %}
         <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
       {% endif %}
-
       {% if artist.bio %}
         <p>{{ artist.bio }}</p>
       {% endif %}
-
       {% if artist.website %}
         <p class="link">Website: <a href="{{ artist.website }}" target="_blank">{{ artist.website }}</a></p>
       {% endif %}
@@ -27,29 +24,34 @@
   </div>
 
   <div class="row justify-content-center">
-    <div class="col-6 text-center mt-5">
+    <div class="text-center mt-5">
       <h2>Fan Reviews:</h2>
-      {% if reviews %}
-        <ul class="list-unstyled">
-          {% for review in reviews %}
-            <li class="chaos-card tilt mt-5">
-              {% if review.image and review.image.url and "placeholder" not in review.image.url %}
-                <img src="{{ review.image.url }}" class="img-fluid card-img-top mt-3 mb-3" alt="Gig image">
-              {% else %}
-                <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns mt-3 mb-3" alt="Default horns image">
-              {% endif %}
 
-              <h3>{{ review.title }}</h3>
-              <p>Fan: 
-                <a href="{% url 'author_profile' review.author.pk %}" style="color:#F50000">
-                  {{ review.author.username }}
-                </a>
-              </p>
-              <p>Date: {{ review.gig_date|date:"d-m-Y" }}</p>
-              <p>{{ review.review }}</p>
-            </li>
+      {% if reviews %}
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
+          {% for review in reviews %}
+            <div class="col justify-content-center">
+              <div class="card h-100 chaos-card tilt">
+                {% if review.image and review.image.url and "placeholder" not in review.image.url %}
+                  <img src="{{ review.image.url }}" class="card-img-top" alt="Gig image">
+                {% else %}
+                  <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+                {% endif %}
+
+                <div class="card-body">
+                  <h5 class="card-title">{{ review.title }}</h5>
+                  <p class="card-text">Fan:
+                    <a href="{% url 'author_profile' review.author.pk %}" style="color:#F50000">
+                      {{ review.author.username }}
+                    </a>
+                  </p>
+                  <p class="card-text">Date: {{ review.gig_date|date:"d-m-Y" }}</p>
+                  <p class="card-text">{{ review.review }}</p>
+                </div>
+              </div>
+            </div>
           {% endfor %}
-        </ul>
+        </div>
       {% else %}
         <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
         <p><em>No reviews yet.</em></p>
@@ -57,4 +59,5 @@
     </div>
   </div>
 </div>
+
 {% endblock %}
