Add validation imgs to Testing.md Add automated testing headings to Testing.md file

--- a/gig_reviews/templates/gig_reviews/author_profile.html
+++ b/gig_reviews/templates/gig_reviews/author_profile.html
@@ -5,7 +5,7 @@
 {% block title %}{{ author.username }}'s Profile{% endblock %}
 
 {% block content %}
-<div class="container search-item py-4">
+<div class="container search-item profile-page py-4">
   <div class="row mx-auto justify-content-center">
     <div class="col-12 text-center">
       <h1>{{ author.username }}'s Public Profile</h1>
