--- a/gig_reviews/templates/gig_reviews/index.html
+++ b/gig_reviews/templates/gig_reviews/index.html
@@ -6,7 +6,7 @@
 <div class="container-fluid hero-image mt-5">
     <div class=" row mx-auto justify-content-center align-items-center">
         <div class="col-12 text-center">
-            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/ptl-hero-image_eccbob.png" class="img-fluid" alt="Praise The Loud hero imagae">
+            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/f_auto,q_auto/ptl-hero-image_eccbob.png" class="img-fluid" alt="Praise The Loud hero imagae">
             <h1>Hear them Loud Praise them Louder</h1>
             <p>Show your love for the artists by writing a review of their gigs</p>
             <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="img-fluid horns mt-0" alt="red rock horns">
