--- a/gig_reviews/templates/gig_reviews/profile.html
+++ b/gig_reviews/templates/gig_reviews/profile.html
@@ -76,7 +76,7 @@
           {% else %}
             <p>Instagram: Not provided</p>
           {% endif %}
-          <a href="?edit=true"><button type="button" class="page-btn">Update Profile</button></a>
+          <a href="?edit=true" class="btn page-btn">Update Profile</a>
           <form method="post" action="{% url 'delete_profile' %}" style="display:inline;" onsubmit="return confirmDelete();">
             {% csrf_token %}
             <button type="submit" class="page-btn">Delete Profile</button>
