--- a/gig_reviews/templates/gig_reviews/profile.html
+++ b/gig_reviews/templates/gig_reviews/profile.html
@@ -77,7 +77,7 @@
             <p>Instagram: Not provided</p>
           {% endif %}
           <a href="?edit=true" class="btn page-btn">Update Profile</a>
-          <form method="post" action="{% url 'delete_profile' %}" style="display:inline;" onsubmit="return confirmDelete();">
+          <form method="post" action="{% url 'delete_profile' %}" style="display:inline;">
             {% csrf_token %}
             <button type="submit" class="page-btn">Delete Profile</button>
           </form>
