Add result-card to profile picture for sizing

--- a/gig_reviews/templates/gig_reviews/profile.html
+++ b/gig_reviews/templates/gig_reviews/profile.html
@@ -16,7 +16,7 @@
         {% endfor %}
       {% endif %}
 
-      <div class="mt-5">
+      <div class="mt-5 result-card">
         {% if editing %}
           {% if profile.image %}
             <img src="{{ profile.image.url }}" class="img-fluid mb-3" alt="Current profile picture">
