Remove sticky footer and add margin top

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
     {% block content %}
     {% endblock %}
   
-<footer class="footer container-fluid">
+<footer class="footer container-fluid mt-5">
   <div class="row mx-auto justify-content-center align-items-center">
     <div class="text-center col-12">
       <p class="footer-p">&copy; /*axdesigns*/ 2025</p>
